# fastcall

./: .pre-commit-config.yaml  README.md  pyproject.toml
fastcall/: app.py
fastcall/static/: index.html  script.js  styles.css
tests/: test_app.py
