[tool.poetry]
name = "fastcall"
version = "0.1.0"
description = "A demo video call project using FastAPI and WebRTC"
authors = ["Ijas <ijasmp18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-socketio = "^5.11.4"
aiofiles = "^24.1.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
